add security add gateway config for ads